<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">电脑预约系统</string>
    <string name="login">登陆</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="reserve">预约</string>
    <string name="record">记录</string>
    <string name="myinfo">我的</string>
    <string name="sanjiao">▼</string>
    <string name="Labinfo_notification">实验室消息通知</string>
    <string name="testresources">资源测试</string>
    <string name="backsuggestion">意见反馈</string>
    <string name="Labinfo_msgboard">实验室留言板</string>
    <string name="checkfornew">检查更新</string>
    <string name="about">关于</string>
    <string name="warningnettext">当前网络不可用，请检查网络设置。</string>
    <string name="loading">正在加载</string>
    <string name="pulltorefresh">下拉刷新</string>
    <string name="relasetorefresh">松开立即刷新</string>
    <string name="lastrefreshtime">上次更新：</string>
    <string name="touchtoloadmore">点击加载更多</string>
    <string name="isloadingmore">正在努力加载</string>
	
    <string name="devicenumber">设备编号：</string>
    <string name="deviceclassify">设备分类：</string>
    <string name="deviceinfo">设备信息：</string>
    
    <string name="canreservetime">当前可预约时间：</string>
    <string name="choosereservetime">请选择预约时间：</string>
    <string name="tmomorning">明天上午</string>
    <string name="tmoafternoon">明天下午</string>
    <string name="tmoevening">明天晚上</string>
    <string name="aftertmomorning">后天上午</string>
    <string name="aftertmoafternoon">后天下午</string>
    <string name="aftertmoevening">后天晚上</string>
    
    <!-- PersonInfo -->
    <string name="change">修改</string>
    <string name="logout">退出登录</string>
    <string name="changeHeadPhoto">修改头像</string>
    <string name="selectpicture">选择图片</string>
    <string name="takepicture">拍照</string>
    <string name="upload">上传</string>
    
    <!-- 修改信息 -->
    <string name="changepassword">修改密码</string>
    <string name="inputpassword">请输入新密码</string>
    <string name="inputagain">请重复输入确认</string>
    
    <!-- back suggestion -->
    <string name="backedithint">请在此处输入您想要反馈的信息</string>
    <string name="commit">提交</string>
    <string name="backcommitsuccess">我们已经收到您的反馈信息！</string>
    
    <!-- 关于 -->
    <string name="abouttext">大连理工大学创新实验学院</string>
    <string name="labinfo">移动互联实验室820</string>
    <string name="version">版本号：V 1.0</string>


    <!-- spinner内容 -->
    <string-array name="equipmentgroup">
        <item>普通PC</item>
        <item>MAC</item>
        <item>pad</item>
    </string-array>
    <string-array name="stategroup">
        <item>所有设备</item>
        <item>当前可预约</item>
        <item>已预约</item>
    </string-array>
    <string-array name="timegroup">
        <item>明天上午</item>
        <item>明天下午</item>
        <item>明天晚上</item>
        <item>后天上午</item>
        <item>后天下午</item>
        <item>后天晚上</item>
    </string-array>

    <string name="title_activity_backsuggestion">BacksuggestionActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_lab_infonoti">Lab_infonotiActivity</string>
    <string name="title_activity_test_resource">Test_resourceActivity</string>
    <string name="title_activity_checkfornew">CheckfornewActivity</string>
    <string name="title_activity_msgboard">MsgboardActivity</string>
    <string name="title_activity_back_suggestion">BackSuggestionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_reserve">ReserveActivity</string>

</resources>