<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simplebackground" >
	
    <LinearLayout
        android:id="@+id/aboutTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/titlecolor"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >
<!--         
        <ImageView
            android:id="@+id/aboutbackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/pic_titleback" /> -->

        <TextView
            android:id="@+id/mainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/about"
            android:textColor="@color/whitecolor"
            android:textSize="20sp" />
    </LinearLayout>
    
    <ImageView 
        android:id="@+id/aboutImage"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/aboutTitleBar"
        android:layout_marginTop="100dp"
        android:src="@drawable/app_logo" />

    <LinearLayout
        android:id="@+id/aboutText"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_below="@+id/aboutImage"
        android:layout_marginTop="50dp"
        android:orientation="vertical" >
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/abouttext"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/labinfo"
            android:textSize="20sp"
            android:gravity="center_horizontal" />
    </LinearLayout>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textSize="13sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:textColor="@color/itemstroke" />

</RelativeLayout>