<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/simplebackground" >

    <LinearLayout
        android:id="@+id/backSuggestionTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/titlecolor"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/mainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/backsuggestion"
            android:textColor="@color/whitecolor"
            android:textSize="20sp" />
    </LinearLayout>
    
    <!-- getfocus -->
    <EditText
        android:layout_width="fill_parent"
        android:layout_height="0dp" />
    
    <EditText
        android:id="@+id/backEditText"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/backSuggestionTitleBar"
        android:background="@drawable/device_info_text"
        android:padding="10dp"
        android:hint="@string/backedithint"
        android:gravity="start"
        android:textSize="15sp" />
    
    <Button 
        android:id="@+id/backCommitButton"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/commit"
        android:textSize="13sp"
        android:background="@drawable/button_cemicircle" />


</RelativeLayout>