<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/simplebackground" >

    <LinearLayout
        android:id="@+id/personDetialTitleBar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/titlecolor"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <TextView
            android:id="@+id/mainTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/about"
            android:textColor="@color/whitecolor"
            android:textSize="20sp" />
    </LinearLayout>
    
    <RelativeLayout 
        android:id="@+id/personDetialLayout"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_below="@id/personDetialTitleBar"
        android:background="@color/whitecolor" >
        <ImageView 
            android:id="@+id/personHeadPhoto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/pic_personheadphoto"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_toRightOf="@id/personHeadPhoto"
            android:layout_marginLeft="20dp"
            android:orientation="vertical"
            android:gravity="center_vertical" >
            <TextView 
                android:id="@+id/personName"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/username"
                android:textSize="15sp" />
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/username"
                android:textSize="15sp" />
        </LinearLayout>
        <Button 
            android:id="@+id/changePersonInfoBtn"
            android:layout_height="25dp"
            android:layout_width="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="@string/change"
            android:textSize="12sp"
            android:textColor="@color/whitecolor"
            android:background="@drawable/login_button_selected" />
       
    </RelativeLayout>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:layout_below="@id/personDetialLayout"
        android:background="@color/stokecolor" />
    
    <TextView
        android:id="@+id/personDetialText"
        android:layout_width="fill_parent"
        android:layout_height="100dp"
        android:background="@drawable/device_info_text"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/personDetialLayout" />
    
    <Button 
        android:id="@+id/logoutButton"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_below="@id/personDetialText"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:background="@drawable/button_logout_selected"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="@color/whitecolor" />
    
</RelativeLayout>
