<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whitecolor"
    tools:context="com.example.demo.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/viewPager"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_above="@+id/bottomMenu"
        android:layout_below="@+id/titlebar" >
    </android.support.v4.view.ViewPager>
    
     <LinearLayout 
        android:id="@+id/titlebar"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@color/titlecolor" >
        
        <TextView 
            android:id="@+id/titleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="20sp"
            android:text="@string/reserve"
            android:textColor="@color/whitecolor" />
    </LinearLayout>

    
    <TextView 
		android:layout_width="fill_parent"
		android:layout_height="1px"
		android:background="@color/stokecolor"
		android:layout_above="@+id/bottomMenu"/>
    <LinearLayout
        android:id="@+id/bottomMenu"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp"
        android:paddingTop="8dp"
        android:background="@color/titlemenuback" >
        <RelativeLayout 
            android:id="@+id/reserveMenuLayout"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/reserveImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/pic_bespeak_blue" />
            <TextView
                android:id="@+id/reserveText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/reserve"
                android:textSize="13sp"
                android:textColor="@color/textselected"
                android:gravity="center_horizontal" />"
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/recordMenuLayout"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/recordImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/pic_record_normal" />
            <TextView
                android:id="@+id/recordText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/record"
                android:textSize="13sp"
                android:textColor="@color/textnomalcolor"
                android:gravity="center_horizontal" />    
            
        </RelativeLayout>
        <RelativeLayout 
            android:id="@+id/myInfoMenuLayout"
            android:layout_height="fill_parent"
            android:layout_width="0dp"
            android:layout_weight="1" >
            <ImageView
                android:id="@+id/myInfoImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentTop="true"
                android:src="@drawable/pic_myinfo_normal" />
            <TextView
                android:id="@+id/myInfoText"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/myinfo"
                android:textSize="13sp"
                android:textColor="@color/textnomalcolor"
                android:gravity="center_horizontal" />
        </RelativeLayout>
        
    </LinearLayout>

</RelativeLayout>